2005-08-18  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/file_manip.cpp: Change the last modification time after
	  copying it.

2005-08-17  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/odb.h:
	* libdb/db_manage.c:
	* libdb/db_insert.c: split the api in two part, one to update a node
	  (or create it) by incrementing by one its associated value and
	  one to create a new node with a given value. This optimize the
	  fast path used by the daemon. Sanity check inside the fast path has
	  been removed too.

	* daemon/opd_sfile.c:
	* daemon/liblegacy/opd_proc.c:
	* libabi/opimport.cpp:
	* libabi/tests/abi_test.cpp:
	* libdb/tests/db_test.c: update according 

2005-08-17  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/bfd_support.h:
	* libutil++/op_bfd.cpp: comment how and why we can use the debuginfo
	  bfd object.
	  

2005-08-16  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/file_manip.cpp: fix compilation on GCC 2.95.x

2005-08-15  Philippe Elie  <phil.el@wanadoo.fr>

	  Fix #1256978: sum of samples count overflow

	* libutil/op_types.h: typedef a unsigned 64 bits count_type
	* libpp/callgraph_container.cpp:
	* libpp/format_output.cpp:
	* libpp/profile.cpp:
	* libpp/profile.h:
	* libpp/profile_container.cpp:
	* libpp/symbol.h:
	* libutil/op_types.h:
	* libutil++/growable_vector.h:
	* pp/opreport.cpp: use it all over place where we need to sum up
	  samples count
	* pp/opgprof.cpp: check for samples count capping for callgraph
	  output

2005-08-15  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/tests/db_test.c: add a better speed test

2005-08-13  Maynard Johnson <maynardj@us.ibm.com>
	 
	* gui/oprof_start.h:
	* libop/op_events.c:
	* libop/op_events.h:
	* libpp/op_header.cpp: change op_event.val field from u8 to u32 to
	  allow event numbers higher than 0X100.

2005-08-13  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/odb.h: 
	* libdb/db_insert.c:
	* libdb/db_manage.c: use a two step node allocation to ensure adding