@@ -12,12 +12,13 @@
 #include <stdio.h>
 
 #include "odb.h"
+#include "op_types.h"
 
 /// hold various statistics data for a db file
 struct odb_hash_stat_t {
 	odb_node_nr_t node_nr;			/**< allocated node number */
 	odb_node_nr_t used_node_nr;		/**< in use node number */
-	odb_value_t   total_count;		/**< cumulated samples count */
+	count_type    total_count;		/**< cumulated samples count */
 	odb_index_t   hash_table_size;		/**< hash table entry number */
 	odb_node_nr_t max_list_length;		/**< worst case   */
 	double       average_list_length;	/**< average case */
@@ -74,7 +75,7 @@ void odb_hash_display_stat(odb_hash_stat_t const * stat)
 {
 	printf("total node number:   %d\n", stat->node_nr);
 	printf("total used node:     %d\n", stat->used_node_nr);
-	printf("total count:         %d\n", stat->total_count);
+	printf("total count:         %llu\n", stat->total_count);
 	printf("hash table size:     %d\n", stat->hash_table_size);
 	printf("greater list length: %d\n", stat->max_list_length);
 	printf("average non empty list length: %2.4f\n", stat->average_list_length);
