@@ -1,3 +1,7 @@
+2005-08-19  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* libdb/db_stat.c: use 64 bits to cumulate samples count.
+
 2005-08-18  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* libutil++/file_manip.cpp: Change the last modification time after
